# ferret

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: __init__.py  confidence.py  decision.py  probe_executor.py
configs/: eval.yaml  train_fgsm.yaml  train_full.yaml
data/: __init__.py  adversarial.py  config.py  datasets.py  download.py  pipeline.py  transforms.py
docs/: ARCHITECTURE.md
env/: __init__.py  language_env.py  unified_env.py  vision_env.py
eval/: ablation.py  baselines.py  benchmark.py  metrics.py  pareto.py  poc_probe.py
ferret/: __init__.py  constants.py  episode.py
graph/: __init__.py  langgraph_agent.py  state.py
graph/nodes/: __init__.py  confidence.py  decision.py  input.py  policy.py  probe.py  router.py
policy/: __init__.py  language_encoder.py  trunk.py  vision_encoder.py
reward/: __init__.py  morl_reward.py
tests/: conftest.py  test_baselines.py  test_checkpoint.py  test_metrics.py  test_pareto.py  test_policy.py
train/: __init__.py  checkpoint.py  morl_logging.py  morl_scalarization.py  ppo_train.py
