[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ferret"
version = "0.1.0"
description = "Sequential adversarial probing agent"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "foolbox>=3.3",
    "gymnasium>=0.29",
    "numpy",
    "Pillow",
    "tqdm",
    "tyro",
    "tensorboard",
    "langgraph>=0.2",
    "wandb>=0.16",
    "matplotlib",
    "scikit-learn",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
